[gd_scene load_steps=13 format=3 uid="uid://guupl4qbnv62"]

[ext_resource type="Script" uid="uid://cpfc76u81a86b" path="res://Scenes/UserInterface/Menus/StartMenu/start_menu.gd" id="1_by8w1"]
[ext_resource type="Texture2D" uid="uid://btgmgfmoildxh" path="res://Scenes/UserInterface/Menus/StartMenu/Assets/Into darkness/Background.png" id="2_4bfjp"]
[ext_resource type="Texture2D" uid="uid://bcgv6d33dg2g" path="res://Scenes/UserInterface/Menus/StartMenu/Assets/Into darkness/PlayButtonNormal.png" id="3_rrxf8"]
[ext_resource type="Texture2D" uid="uid://c7wj3mx0hlcew" path="res://Scenes/UserInterface/Menus/StartMenu/Assets/Into darkness/PlayButtonPressed.png" id="4_07uwn"]
[ext_resource type="Texture2D" uid="uid://dmw6wf83sirwd" path="res://Scenes/UserInterface/Menus/StartMenu/Assets/Into darkness/PlayButtonHover.png" id="5_0nitu"]
[ext_resource type="Texture2D" uid="uid://dktfy7ysmdf7q" path="res://Scenes/UserInterface/Menus/StartMenu/Assets/Into darkness/OptionsButtonNormal.png" id="6_w6jul"]
[ext_resource type="Texture2D" uid="uid://e03rx4v30o51" path="res://Scenes/UserInterface/Menus/StartMenu/Assets/Into darkness/OptionsButtonPressed.png" id="7_hui5i"]
[ext_resource type="Texture2D" uid="uid://cs2lumx1w3o07" path="res://Scenes/UserInterface/Menus/StartMenu/Assets/Into darkness/OptionsButtonHover.png" id="8_pctvg"]
[ext_resource type="Texture2D" uid="uid://cp3nx8t2p26kk" path="res://Scenes/UserInterface/Menus/StartMenu/Assets/Into darkness/QuitButtonNormal.png" id="9_hg522"]
[ext_resource type="Texture2D" uid="uid://flxfubvbpp6x" path="res://Scenes/UserInterface/Menus/StartMenu/Assets/Into darkness/QuitButtonPressed.png" id="10_ejdl3"]
[ext_resource type="Texture2D" uid="uid://baw2dfx51n06l" path="res://Scenes/UserInterface/Menus/StartMenu/Assets/Into darkness/QuitButtonHover.png" id="11_5ilai"]
[ext_resource type="PackedScene" uid="uid://whggsav0yanr" path="res://Scenes/UserInterface/Menus/OptionMenu/option_menu.tscn" id="12_v8gh5"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_by8w1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -12.0
offset_top = -16.0
offset_right = 2780.0
offset_bottom = 1427.0
texture = ExtResource("2_4bfjp")
expand_mode = 1
stretch_mode = 4

[node name="PlayButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 219.0
offset_right = 503.0
offset_bottom = 310.0
texture_normal = ExtResource("3_rrxf8")
texture_pressed = ExtResource("4_07uwn")
texture_hover = ExtResource("5_0nitu")
stretch_mode = 0

[node name="Label" type="Label" parent="PlayButton"]
layout_mode = 0
offset_right = 457.0
offset_bottom = 94.0
theme_override_font_sizes/font_size = 30
text = "buttonPlay"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 330.0
offset_right = 503.0
offset_bottom = 421.0
texture_normal = ExtResource("6_w6jul")
texture_pressed = ExtResource("7_hui5i")
texture_hover = ExtResource("8_pctvg")
stretch_mode = 0

[node name="Label" type="Label" parent="OptionsButton"]
layout_mode = 0
offset_right = 457.0
offset_bottom = 94.0
theme_override_font_sizes/font_size = 30
text = "buttonOptions"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 442.0
offset_right = 503.0
offset_bottom = 533.0
texture_normal = ExtResource("9_hg522")
texture_pressed = ExtResource("10_ejdl3")
texture_hover = ExtResource("11_5ilai")
stretch_mode = 0

[node name="Label" type="Label" parent="QuitButton"]
layout_mode = 0
offset_right = 457.0
offset_bottom = 94.0
theme_override_font_sizes/font_size = 30
text = "buttonQuit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Rullet" type="TextureButton" parent="."]
visible = false
layout_mode = 0
offset_left = 489.0
offset_top = 205.0
offset_right = 944.0
offset_bottom = 296.0
rotation = 1.5708
texture_normal = ExtResource("9_hg522")
texture_pressed = ExtResource("10_ejdl3")
texture_hover = ExtResource("11_5ilai")
stretch_mode = 0

[node name="uploadButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -222.0
offset_top = 23.0
offset_right = -12.0
offset_bottom = 112.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "buttonUpload"

[node name="Options" parent="." instance=ExtResource("12_v8gh5")]
visible = false
layout_mode = 1
offset_left = 2.0
offset_right = 2.0

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Rullet" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="uploadButton" to="." method="_on_upload_button_pressed"]
